Moved from 0.2 to 0.3

--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,9 @@
 global:
   web_port: 8080
   webhook_secret: 'Password00'
+  flask_debug: True
+  db_server: 'dbserver01'
+  db_name: 'database01'
 
 # MS Graph API settings
 graph:
@@ -13,3 +16,10 @@ graph:
   user_id: '1f53061b-8d51-49ac-9c8a-bbf1cebd5ab6'
   chat_id: '19:847516a419864851b24cb9f7e8a6426b@thread.v2'
 
+smtp:
+  server: 'smtp.mailserver.com'
+  port: 25
+  sender: 'user@mailserver.com'
+  receivers:
+    - 'user@mailserver.com'
+    - 'admin@mailserver.com'
