--- a/plugins/mist/mist-config.yaml
+++ b/plugins/mist/mist-config.yaml
@@ -26,15 +26,16 @@ device_event:
   GW_CONFIG_GENERATED: 3
   GW_CONFIG_FAILED: 1
   GW_OSPF_NEIGHBOR_DOWN:
-    10.1.1.1: 1
-    10.1.1.2: 1
+    172.16.1.1: 1
+    172.16.2.1: 1
     default: 3
   GW_OSPF_NEIGHBOR_UP:
-    10.1.1.1: 1
-    10.1.1.2: 1
+    172.16.1.1: 1
+    172.16.2.1: 1
     default: 3
   GW_PORT_UP: 3
   GW_RECONFIGURED: 3
+  GW_REJECTED: 2
   GW_RESTART_BY_USER: 1
   GW_VPN_PATH_DOWN: 2
   GW_VPN_PATH_UP: 3
@@ -50,6 +51,8 @@ device_event:
   SW_CONFIG_GENERATED: 2
   SW_CONFIGURED: 3
   SW_CONNECTED: 2
+  SW_DDOS_PROTOCOL_VIOLATION_SET: 1
+  SW_DDOS_PROTOCOL_VIOLATION_CLEAR: 1
   SW_DISCONNECTED: 1
   SW_DOT1XD_USR_AUTHENTICATED:
     vlan Admin: 3
@@ -57,14 +60,17 @@ device_event:
     508857fb3518: 3
     default: 1
   SW_DYNAMIC_PORT_ASSIGNED: 4
-  SW_PORT_DOWN: 4
+  SW_PORT_DOWN:
+    ADM-NET-SW-Core01: 1
+    ADM-NET-SW-Edge01: 1
+    SR-NET-SW-Edge01: 1
+    default: 4
   SW_PORT_UP: 4
   SW_RECONFIGURED: 3
   SW_REJECTED: 1
   SW_RESTART_BY_USER: 2
   SW_RESTARTED: 1
   SW_STP_TOPO_CHANGED:
-    TopoChgCnt 3204: 3
     default: 1
   SW_UPGRADE_BY_USER: 3
   SW_UPGRADE_FAILED: 1
@@ -77,6 +83,7 @@ device_event:
   AP_CONFIGURED: 3
   AP_CONNECTED: 2
   AP_DISCONNECTED: 1
+  AP_DISCONNECTED_V1: 1
   AP_RECONFIGURED: 3
   AP_RESTARTED: 2
   AP_RRM_ACTION: 4
