--- a/plugins/junos/junos-config.yaml
+++ b/plugins/junos/junos-config.yaml
@@ -4,5 +4,24 @@
 # This file contains configuration information for the junos plugin
 
 config:
-  webhook_secret: 'Secret'
+  webhook_secret: 'Password00'
   auth_header: 'Junos-Auth'
+  sql_table: 'junos_events'
+
+
+# Syslog events on devices
+events:
+  DH_SVC_SENDMSG_FAILURE: 2
+  FPC 0 PIC 0: 1
+  LACP_INTF_MUX_STATE_CHANGED: 1
+  LICENSE_EXPIRED_KEY_DELETED: 2
+  ROOT_PORT: 1
+  RPD_RT_HWM_NOTICE: 3
+  RTPERF_CPU_UTIL_MAX: 1
+  SYSTEM_ABNORMAL_SHUTDOWN: 1
+  TOPO_CH: 2
+  UI_COMMIT: 2
+  UI_COMMIT_NOT_CONFIRMED:
+  UI_REBOOT_EVENT: 2
+  UTMD_CF_CONFIG_DEPRECATED: 2
+  UTMD_EWF_CAT_OBSOLETE: 2
