--- a/plugins/mist/mist-config.yaml
+++ b/plugins/mist/mist-config.yaml
@@ -7,9 +7,9 @@
 # Mist plugin configuration
 # Mist passes the 'X-Mist-Signature-v2' header, containing a hash;
 config:
-  debug: False
-  webhook_secret: 'Secret'
+  webhook_secret: 'Password00'
   auth_header: 'X-Mist-Signature-V2'
+  sql_table: 'mist_events'
 
 
 # Events are organized by how critical they are
@@ -26,12 +26,12 @@ device_event:
   GW_CONFIG_GENERATED: 3
   GW_CONFIG_FAILED: 1
   GW_OSPF_NEIGHBOR_DOWN:
-    172.16.1.1: 1
-    172.16.2.1: 1
+    172.16.41.1: 1
+    172.16.42.1: 1
     default: 3
   GW_OSPF_NEIGHBOR_UP:
-    172.16.1.1: 1
-    172.16.2.1: 1
+    172.16.41.1: 1
+    172.16.42.1: 1
     default: 3
   GW_PORT_UP: 3
   GW_RECONFIGURED: 3
@@ -40,8 +40,8 @@ device_event:
   GW_VPN_PATH_DOWN: 2
   GW_VPN_PATH_UP: 3
   GW_VPN_PEER_DOWN:
-    1.1.1.1: 1
-    2.2.2.2: 1
+    103.148.240.26: 1
+    103.164.7.21: 1
     default: 3
   GW_VPN_PEER_UP: 3
 
@@ -54,11 +54,7 @@ device_event:
   SW_DDOS_PROTOCOL_VIOLATION_SET: 1
   SW_DDOS_PROTOCOL_VIOLATION_CLEAR: 1
   SW_DISCONNECTED: 1
-  SW_DOT1XD_USR_AUTHENTICATED:
-    vlan Admin: 3
-    vlan Printers: 3
-    508857fb3518: 3
-    default: 1
+  SW_DOT1XD_USR_AUTHENTICATED: 3
   SW_DYNAMIC_PORT_ASSIGNED: 4
   SW_PORT_DOWN:
     ADM-NET-SW-Core01: 1
@@ -66,6 +62,7 @@ device_event:
     SR-NET-SW-Edge01: 1
     default: 4
   SW_PORT_UP: 4
+  SW_RADIUS_SERVER_UNRESPONSIVE: 1
   SW_RECONFIGURED: 3
   SW_REJECTED: 1
   SW_RESTART_BY_USER: 2
